
2020-05-04  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: pass exec_prefix as it is likely referenced in the LIBS
	  entries used (thanks to Robert Dubner)
	* atlocal.in, atlocal_valgrind, atlocal_win: unified

2020-04-02  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in, testsuite.src/run_manual_screen.at:
	  pass program to run to the script instead of hard-wire of "./prog"

2020-03-22  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal_win: use intermediate info.out instead of calling
	  cobc --info multiple times

2020-03-01  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: COB_LIBS during test be based on built-in COB_LIBS, not
	  on built-in LIBCOB_LIBS

2019-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in, Makefile.am: changed the manual test runner
	  to be a script handled by autoconf instead of make

2019-06-18  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: explicit disable BDB internal locking by unsetting DB_HOME
	  to work around issues in different environments and to not pollute the
	  users's general BDB locking files

2019-06-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (check, checkmanual): now fails if the testsuite reports
	  any unexpected result (exit with non-zero return)

2019-05-24  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: early unset of COB_ variables (before we set them...)

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am, atlocal.in: splitted some make targets and added new
	  localcheck target, which runs the testsuite using the current
	  environment (whatever GnuCOBOL version is in PATH)

2019-03-23  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_fundamental.at, testsuite.src/run_misc.at:
	  adjusted C test sources in the testsuite to include stdio.h
	  where necessary

2019-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src/*: adjusted C test sources in the testsuite
	  with missing/wrong external attributes
