@@ -22,9 +22,8 @@
 
 sep='@PATH_SEPARATOR@'
 
-#PATH="@abs_top_builddir@/libcob/.libs${sep}@abs_top_builddir@/libcob${sep}$PATH"
-PATH="@abs_top_builddir@/cobc${sep}$PATH"
-PATH="@abs_top_builddir@/bin${sep}$PATH"
+PATH="@abs_top_builddir@/libcob/.libs${sep}$PATH"
+PATH="@abs_top_builddir@/cobc${sep}$PATH{sep}@abs_top_builddir@/bin${sep}$PATH"
 export PATH
 
 
@@ -48,7 +47,7 @@ LD_LIBRARY_PATH="@abs_top_builddir@/libcob/.libs:$LD_LIBRARY_PATH"     # GNU/Lin
 DYLD_LIBRARY_PATH="@abs_top_builddir@/libcob/.libs:$DYLD_LIBRARY_PATH" # Mac OS
 SHLIB_PATH="@abs_top_builddir@/libcob/.libs:$SHLIB_PATH"               # HP-UX
 LIBPATH="@abs_top_builddir@/libcob/.libs:$LIBPATH"                     # AIX
-COB_LIBRARY_PATH="@abs_top_builddir@/extras:$COB_LIBRARY_PATH"
+COB_LIBRARY_PATH="@abs_top_builddir@/extras:$COB_LIBRARY_PATH"         # only in pre-inst case: prepend
 
 export COB_CFLAGS COB_LDFLAGS COB_LIBS
 export COB_CONFIG_DIR COB_COPY_DIR
