@@ -1,4 +1,11 @@
 
+2020-05-06  Simon Sobisch <simonsobisch@gnu.org>
+
+	* atlocal.in: allow COBC, COBCRUN, COBCRUN_DIRECT to override
+	  for make localcheck (especially useful in case of installprefix)
+	* Makefile.am: added some comments and an explicit warning for
+	  installcheck target
+
 2020-05-04  Simon Sobisch <simonsobisch@gnu.org>
 
 	* atlocal.in: pass exec_prefix as it is likely referenced in the LIBS
